<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:empub="http://schemas.android.com/apk/res-auto">
     <CheckBoxPreference
		android:key="FMART"
		android:summary="@string/fmarketsummary"
		android:title="@string/fmarkets"/>
     
	<CheckBoxPreference
		android:key="OREST"
		android:summary="@string/orestaurantsummary"
		android:title="@string/oreatuarants"/>
	
	<CheckBoxPreference
		android:key="VREST"
		android:summary="@string/vrestaurantsummary"
		android:title="@string/vreatuarants"/>
	
	<CheckBoxPreference 
	    android:key="OFARMS" 
	    android:summary="@string/ofarmsummary"
	    android:title="@string/ofarms" />
 	<CheckBoxPreference 
	    android:key="COPEN" 
	    android:summary="@string/currentlyopensummary"
	    android:title="@string/currentlyopen" />
  </PreferenceScreen>