<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <ImageView
	    android:id="@+id/icon"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:contentDescription="@string/icon"
	    android:padding="2dip"
	    android:src="@drawable/ftt1" />
      <TextView
		    android:id="@+id/title"
		    android:layout_width="fill_parent"
            android:layout_height="wrap_content"
		    android:textSize="25sp"
		    android:textStyle="bold"
		    android:layout_toRightOf="@+id/icon"/>
	   <TextView
		    android:id="@+id/snippet"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="15sp" 
		    android:layout_below="@+id/icon"/>
		
		<TextView
		    android:id="@+id/directions"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="12sp"
		    android:textStyle="bold"
		    android:text="@string/directions"
		    android:layout_below="@+id/snippet" 
		     />
 
		<TextView
		    android:id="@+id/moreinfo"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textStyle="bold"
		    android:text="@string/moreinfo"
		    android:textSize="12sp" 
		    android:layout_toRightOf="@+id/directions"/>
	   

 
</RelativeLayout>
